# my-key

./: keyboard.md  readme.md
HaKey/: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
HaKey/key/: KeyCode.cppm  KeyDispatcher.cppm  KeyModule.cppm  KeyState.cppm  VKey.cppm
HaKey/key/core/: CoreModule.cppm  Key.cppm  KeyChainHandler.cppm  KeyContext.cppm  KeyEvent.cppm  KeyResult.cppm  KeyShare.cppm  KeyState.cppm  VKey.cppm
HaKey/key/layers/: 60KeyRemap.cppm  BaseHotKeyLayer.cppm  BaseStringLayer.cppm  HomeRowNavigation.cppm  LayersModule.cppm  PropagateKey.cppm  StringReplaceLayer.cppm
HaKey/key/shared/: Platform.h
HaKey/key/system/: ISystemKeyDispatcher.cppm  LinuxKeyDispatcher.cppm  SystemModule.cppm  WindowsKeyDispatcher.cppm
HaKey/key/utils/: KeyUtils.cppm
scripts/: 60pKeyRemap.ahk  autoClick.ahk  homeRowNavigation.ahk  main.ahk  muteMike.ahk  navigationLayer.ahk  showToolTip.ahk  stringReplace.ahk  toggleNavigationBase.ahk  toggleNavigationLayer1.ahk
